--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head><titile>spacio</title><head>
 <body>
+<scripts src="config.json"></scripts>
 <h1>spacio designs</h1>
 </body>
 </html>
